# pymusicxml

./: .build.yml  .gitignore  README.md  setup.cfg  setup.py
examples/: DirectExample.musicxml  algorithmic_score_creation_and_export.py  direct_score_creation_and_export.py
pymusicxml/: __init__.py  _utilities.py  directions.py  enums.py  music_xml_objects.py  notations.py  score_components.py  spanners.py
