[metadata]
name = pymusicxml
description = A simple python library for exporting MusicXML.
long_description = file: README.md
long_description_content_type = text/markdown
author = Marc Evanstein
author_email = marc@marcevanstein.com
url = https://git.sr.ht/~marcevanstein/pymusicxml
license = GNU GPL Version 3
version = 0.5.6
classifier =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find:
python_requires = >=3.10